align colors of planer and my courses but keep yellow as default, fixes #9101
git-svn-id: svn://develop.studip.de/studip/trunk@59195 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/less/tables.less
+++ b/resources/assets/stylesheets/less/tables.less
@@ -171,6 +171,17 @@ td.tree-elbow-line, td.tree-elbow-end {
 .gruppe6 { background-color: @content-color-60 !important; }
 .gruppe7 { background-color: @base-color-60 !important; }
 .gruppe8 { background-color: @violet !important; }
+
+.gruppe0 { background-color: @dark-violet !important; }
+.gruppe1 { background-color: @violet !important; }
+.gruppe2 { background-color: @red !important; }
+.gruppe3 { background-color: @orange !important; }
+.gruppe4 { background-color: @activity-color !important; }
+.gruppe5 { background-color: @green !important; }
+.gruppe6 { background-color: @dark-green !important; }
+.gruppe7 { background-color: @petrol !important; }
+.gruppe8 { background-color: @brown !important; }
+
 #my_seminars, #settings-notifications {
     .gruppe0, .gruppe1, .gruppe2, .gruppe3, .gruppe4,
     .gruppe5, .gruppe6, .gruppe7, .gruppe9 {
